--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -25,6 +25,7 @@
   </head>
 
   <body>
+    <div id="page-top" />
 
     {% block nav %}
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
