--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -128,8 +128,25 @@
             <div class="col-md-12">
               <img src="static/dimages/ComparebySome.png?version={{ version }}" style="width: 1170px;" />
             </div>
-              <div id="biom1_participants" class="side-by-side div-size" style="margin-bottom: 60px;"><p></p></div>
+              <div id="biom1_participants" class="side-by-side div-size" style="margin-bottom: 60px; margin-left: 244px;"><p></p></div>
               <div id="biom1_engaged" class="side-by-side div-size" style="margin-bottom: 60px;"><p></p></div>
+              <div class="pull-right" style="margin-right: 100px;">
+                <div style="text-align:left;">
+                  <div style="height: 72px;"></div>
+                  <div style="width: 144px;">
+                    <div style="background-color: #FF0000; width: 20px; height: 20px; float: left;"></div><div style="color: #FF0000; float:left; padding-left:2px;">Critical</div>
+                  </div>
+                  <div style="width: 144px; height: 4px; clear: left;"></div>
+                  <div style="width: 144px;">
+                    <div style="background-color: #ECA0A0; width: 20px; height: 20px; float: left;"></div><div style="color: #ECA0A0; float:left; padding-left:2px; ">Out of Normal</div>
+                  </div>
+                  <div style="width: 144px; height: 4px;clear: left;"></div>
+                  <div style="width: 144px;">
+                    <div style="background-color: #C0C0C0; width: 20px; height: 20px; float: left;"></div><div style="color: #C0C0C0; float:left; padding-left:2px; ">Normal</div>
+                  </div>
+                </div>
+	      </div>
+
               <div>
                 <div id="biom2_participants" class="side-by-side div-size" style="margin-bottom: 60px;">
 		  <p></p>
