Enabling SSL 	modified:   conf/README.md 	deleted:    conf/alfa.conf 	typechange: conf/gunicorn.service 	typechange: conf/nginx.conf 	new file:   conf/server.conf 	modified:   home/templates/pop_biom.html 	modified:   home/templates/splash.html 	new file:   static/js/d3.v3.min.js

--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -3,7 +3,7 @@
 {% block container_content %}
   <link rel="stylesheet" type="text/css"  href="/static/css/barchart.css">
   <link rel="stylesheet" type="text/css"  href="/static/css/pop_biom.css">
-  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="/static/js/d3.v3.min.js"></script>
   <script src="/static/js/pop_biom/barchart.js"></script>
   <script src="/static/js/pop_biom/stacked_bar_chart.js"></script>
   <script src="/static/js/pop_biom/masked_line_chart.js"></script>
