--- a/home/templates/splash.html
+++ b/home/templates/splash.html
@@ -5,7 +5,7 @@
     <div class="container">
 
       {% block page_header %}
-        <div class="page-header">
+        <div class="page-header" style="padding-top: 144px;" >
           <h1>Welcome to Zakipoint Alpha. <br/>
 	    <small class="text-muted">Use of this system is restricted to trusted testers</small></h1>
         </div>
