Capability-based model and the ability to support multiple companies 	modified:   home/__init__.py 	modified:   home/admin.py 	modified:   home/fixtures.py 	modified:   home/healthmetrics.py 	new file:   home/migrations/0002_auto_20151125_1306.py 	new file:   home/migrations/0003_auto_20151201_0548.py 	new file:   home/migrations/0004_auto_20151201_0624.py 	new file:   home/migrations/0005_approle_capability.py 	new file:   home/migrations/0006_auto_20151203_0636.py 	new file:   home/migrations/0007_auto_20151203_0645.py 	new file:   home/migrations/0008_auto_20151207_1602.py 	new file:   home/migrations/0009_remove_approle_name.py 	modified:   home/models.py 	modified:   home/session.py 	modified:   home/templates/404.html 	modified:   home/templates/base.html 	new file:   home/templates/choose-co.html 	modified:   home/templates/error.html 	modified:   home/tests.py 	modified:   home/views.py 	modified:   zphalfa/rpc.py 	modified:   zphalfa/urls.py

--- a/home/templates/error.html
+++ b/home/templates/error.html
@@ -7,7 +7,7 @@
 <div class="container">
 
   {% block page_header %}
-    <h4> Problem </h4>
+    <h4 style="padding-top: 144px; text-align: left;"> Problem </h4>
   {% endblock %} <!-- endblock page_header -->
 
   <div class="row">
