--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css"  href="/static/css/zakipoint.css">
     <link rel="stylesheet" type="text/css"  href="/static/css/animate.min.css">
 
-    <link rel="shortcut icon" type="image/png" href="static/images/favicon-transparent.png"/>
+    <link rel="shortcut icon" type="image/png" href="/static/images/favicon-transparent.png"/>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" type="text/css"/>
     <script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js" type="text/javascript"></script>
@@ -74,7 +74,7 @@
 
     {% block 2ndnav %}
 
-    {% endblock %}  <!-- endblog 2ndnav -->
+    {% endblock %}  <!-- endblock 2ndnav -->
 
         {% block messages %}
         <!-- messages, hidden for growl to pick up -->
