--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -156,6 +156,16 @@
     <script src="/static/js/js.cookie.js"> </script>
     <script src="/static/js/json2.min.js"> </script>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{ ga_code }}', 'auto');
+      ga('send', 'pageview');
+    </script>
+
     {% block footopt %}
     {% endblock %}  <!-- footopt (load other bottom of page scripts, etc... here) -->
 
